Added counter in front of each paper for each category. Changed bibtex file for Mike to take over.

--- a/src/MainContent/Publications/bibtex.bib
+++ b/src/MainContent/Publications/bibtex.bib
@@ -1,17 +1,17 @@
 @article{chambers2023variable,
-  author={Chambers, Vaughn and Hobbs, Bradley and Gaither, William and The, Zachary and Zhou, Anthony and \textbf{C. Karakasis} and Artemiadis, Panagiotis},
-  journal={ASME Journal of Mechanisms and Robotics},
-  title={{The Variable Stiffness Treadmill (VST) 2.0: Development and Validation of a Unique Tool to
-Investigate Locomotion on Compliant Terrains}},
+  author={Vaughn Chambers, Bradley Hobbs, William Gaither, Zachary The, Anthony Zhou, Chrysostomos Karakasis, and Panagiotis Artemiadis},
+  booktitle={ASME Journal of Mechanisms and Robotics},
+  title={The Variable Stiffness Treadmill (VST) 2.0: Development and Validation of a Unique Tool to
+Investigate Locomotion on Compliant Terrains},
   volume={},
   year={2023},
   note={Under Review}
 }
 
 @inproceedings{karakasis2023f,
-  author={\textbf{C. Karakasis} and Salati, Robert and Artemiadis, Panagiotis},
+  author={Chrysostomos Karakasis, Robert Salati, and Panagiotis Artemiadis},
   booktitle={2023 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
-  title={{Adjusting the Quasi-Stiffness of an Ankle-Foot Prosthesis Improves Walking Stability during Locomotion over Compliant Terrain}},
+  title={Adjusting the Quasi-Stiffness of an Ankle-Foot Prosthesis Improves Walking Stability during Locomotion over Compliant Terrain},
   year={2023},
   volume={},
   number={},
@@ -20,9 +20,9 @@ Investigate Locomotion on Compliant Terrains}},
   doi={10.1109/IROS55552.2023.10342344}}
 
 @article{karakasis2023energy,
-  author = {\textbf{C. Karakasis} and Poulakakis, Ioannis and Artemiadis, Panagiotis},
-  title = "{An Energy-Based Framework for Robust Dynamic Bipedal Walking Over Compliant Terrain}",
-  journal = {Journal of Dynamic Systems, Measurement, and Control},
+  author = {Chrysostomos Karakasis, Ioannis Poulakakis, and Panagiotis Artemiadis},
+  title = "An Energy-Based Framework for Robust Dynamic Bipedal Walking Over Compliant Terrain",
+  booktitle = {Journal of Dynamic Systems, Measurement, and Control},
   pages = {1-12},
   year = {2023},
   month = {11},
@@ -34,9 +34,9 @@ Investigate Locomotion on Compliant Terrains}},
 }
 
 @inproceedings{karakasis2022,
-  author={\textbf{C. Karakasis}, and Poulakakis, Ioannis and Artemiadis, Panagiotis},
+  author={Chrysostomos Karakasis, Ioannis Poulakakis, and Panagiotis Artemiadis},
   booktitle={2022 30th Mediterranean Conference on Control and Automation (MED)},
-  title={\href{https://ieeexplore.ieee.org/document/9837236}{Robust Dynamic Walking for a 3D Dual-SLIP Model under One-Step Unilateral Stiffness Perturbations: Towards Bipedal Locomotion over Compliant Terrain}},
+  title={Robust Dynamic Walking for a 3D Dual-SLIP Model under One-Step Unilateral Stiffness Perturbations: Towards Bipedal Locomotion over Compliant Terrain},
   year={2022},
   volume={},
   number={},
@@ -45,17 +45,17 @@ Investigate Locomotion on Compliant Terrains}},
 }
 
 @article{karakasis2021real,
-  title={\href{https://www.sciencedirect.com/science/article/pii/S0021929021006072}{Real-time kinematic-based detection of foot-strike during walking}},
-  author={\textbf{C. Karakasis} and Artemiadis, Panagiotis},
-  journal={Journal of Biomechanics},
+  title={Real-time kinematic-based detection of foot-strike during walking},
+  author={Chrysostomos Karakasis and Panagiotis Artemiadis},
+  booktitle={Journal of Biomechanics},
   pages={110849},
   year={2021},
   publisher={Elsevier}
 }
 
 @inproceedings{karakasis2021f,
-  title={\href{https://ieeexplore.ieee.org/document/9636335}{F-VESPA: A Kinematic-based Algorithm for Real-time Heel-strike Detection During Walking}},
-  author={\textbf{C. Karakasis} and Artemiadis, Panagiotis},
+  title={F-VESPA: A Kinematic-based Algorithm for Real-time Heel-strike Detection During Walking},
+  author={Chrysostomos Karakasis and Panagiotis Artemiadis},
   booktitle={2021 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
   pages={5098--5103},
   year={2021},
@@ -64,8 +64,8 @@ Investigate Locomotion on Compliant Terrains}},
 
 
 @inproceedings{karakasis2020exploiting,
-  title={\href{https://ieeexplore.ieee.org/document/9159012}{{Exploiting the SoC FPGA Capabilities in the Control Architecture of a Quadruped Robot}}},
-  author={\textbf{C. Karakasis} and Machairas, Konstantinos and Marantos, Charalampos and Paraskevas, Iosif S and Papadopoulos, Evangelos and Soudris, Dimitrios},
+  title={Exploiting the SoC FPGA Capabilities in the Control Architecture of a Quadruped Robot},
+  author={Chrysostomos Karakasis, Konstantinos Machairas, Charalampos Marantos, Iosif S. Paraskevas, Evangelos Papadopoulos, and Dimitrios Soudris},
   booktitle={2020 IEEE/ASME International Conference on Advanced Intelligent Mechatronics (AIM)},
   pages={501--507},
   year={2020},
