Added links to projects under research assistant. Added urls to publications.

--- a/public/bibtex.bib
+++ b/public/bibtex.bib
@@ -5,7 +5,7 @@
 Investigate Locomotion on Compliant Terrains},
   volume={},
   year={2023},
-  note={Under Review}
+  note={, Under Review}
 }
 
 @inproceedings{karakasis2023f,
@@ -17,7 +17,8 @@ Investigate Locomotion on Compliant Terrains},
   number={},
   pages={2140-2145},
   keywords={Legged locomotion;Instruments;Green products;Robustness;Safety;Admittance;Standards},
-  doi={10.1109/IROS55552.2023.10342344}}
+  doi={10.1109/IROS55552.2023.10342344},
+  url = {https://doi.org/10.1109/IROS55552.2023.10342344}}
 
 @article{karakasis2023energy,
   author = {Chrysostomos Karakasis, Ioannis Poulakakis, and Panagiotis Artemiadis},
@@ -41,7 +42,8 @@ Investigate Locomotion on Compliant Terrains},
   volume={},
   number={},
   pages={969-975},
-  doi={10.1109/MED54222.2022.9837236}
+  doi={10.1109/MED54222.2022.9837236},
+  url = {https://doi.org/10.1109/MED54222.2022.9837236}
 }
 
 @article{karakasis2021real,
@@ -50,7 +52,9 @@ Investigate Locomotion on Compliant Terrains},
   booktitle={Journal of Biomechanics},
   pages={110849},
   year={2021},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  doi= {10.1016/j.jbiomech.2021.110849},
+  url = {https://doi.org/10.1016/j.jbiomech.2021.110849}
 }
 
 @inproceedings{karakasis2021f,
@@ -59,7 +63,9 @@ Investigate Locomotion on Compliant Terrains},
   booktitle={2021 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
   pages={5098--5103},
   year={2021},
-  organization={IEEE}
+  organization={IEEE},
+  doi = {10.1109/IROS51168.2021.9636335},
+  url = {https://doi.org/10.1109/IROS51168.2021.9636335}
 }
 
 
@@ -70,5 +76,6 @@ Investigate Locomotion on Compliant Terrains},
   pages={501--507},
   year={2020},
   organization={IEEE},
+  doi = {10.1109/AIM43001.2020.9159012},
   url={https://ieeexplore.ieee.org/document/9159012}
 }
