Updated CV and Publications with TRO paper under review.

--- a/public/bibtex.bib
+++ b/public/bibtex.bib
@@ -1,3 +1,12 @@
+@article{karakasis2024improving,
+  title={Improving Walking Stability of Ankle-Foot Prostheses across Various Compliant Terrains},
+  author={Chrysostomos Karakasis, Camryn Scully, Robert Salati, and Panagiotis Artemiadis},
+  booktitle={IEEE Transactions on Robotics},
+  year={2024},
+  publisher={IEEE},
+  note={, Under Review}
+}
+
 @article{chambers2023variable,
   author={Vaughn Chambers, Bradley Hobbs, William Gaither, Zachary The, Anthony Zhou, Chrysostomos Karakasis, and Panagiotis Artemiadis},
   booktitle={ASME Journal of Mechanisms and Robotics},
